# haskell-zre

./: .gitignore  CHANGELOG.md  README.md  README.rst  build_watch  ci.dhall  default.nix  stack.yaml  zre.cabal  zre.conf  zre.nix
.github/workflows/: ci.yaml
app/: Cat.hs  Main.hs  Match.hs  Monadic.hs  Time.hs  Worker.hs  ZGossipSrv.hs
attic/: ZRE.wtf  ZRE.wtf.ok  hello_msg_sample.hs  presentation.mdp  udpbeacon.hs  zre.hs
nix/: binary-low-level.nix  zeromq-haskell.nix
nixops/: README.rst  common.nix  zgossip.nix  zre-libvirt.nix  zre.nix  zretime.nix
src/Data/: ZGossip.hs  ZMQParse.hs  ZRE.hs
src/Network/: ZGossip.hs  ZRE.hs
src/Network/ZGossip/: Types.hs  ZMQ.hs
src/Network/ZRE/: Beacon.hs  Chan.hs  Config.hs  Lib.hs  Options.hs  Parse.hs  Peer.hs  Types.hs  Utils.hs  ZMQ.hs
src/System/ZMQ4/: Endpoint.hs
test/: Arbitrary.hs  Binary.hs  Endpoint.hs  Spec.hs  ZGossip.hs  ZRE.hs
