name:                zre
version:             0.1.0.0
synopsis:            ZYRE protocol implementation
description:         Please see README.md
--homepage:            https://
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2016 Richard Marko
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       Network.ZRE
                       , Network.ZRE.Peer
                       , Network.ZRE.Utils
                       , Network.ZRE.Types
                       , Network.ZRE.ZMQ
                       , Data.ZRE
                       , System.ZMQ4.Endpoint
  build-depends:       base >= 4.7 && < 5
                     , async
                     , attoparsec
                     , network
                     , network-info
                     , network-multicast
                     , binary
                     , binary-strict
                     , bytestring
                     , containers
                     , mtl
                     , sockaddr
                     , process
                     , random
                     , stm
--                     , streaming-commons
                     , time
                     , uuid
                     , zeromq4-haskell
  default-language:    Haskell2010

executable zre
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zre
  default-language:    Haskell2010

test-suite zre-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zre
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/zre
